<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutNewPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarNewPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/menu_add_post"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/add_post_toolbar_title"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/editTextAddPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:hint="@string/add_post_hint_text"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayoutNewPost" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_post_add_image_chip"
        app:chipIcon="@drawable/ic_add_image_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddPost" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipAddImage" />

</androidx.constraintlayout.widget.ConstraintLayout>